Finally! got the Correct GIThub Setup, Also got the correct firebase project setup, with the following command line references to avoid the issue again. They won't hold a hustler down. lol
In this commit I commented the hero img display declelaration in the style rule. I may be off on the layout shift protion. Trying to rea align for the remainder of course

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -101,7 +101,7 @@ section.hero img {
     width: 100%;
     height: auto;
     filter: brightness(50%);
-    display: none;
+    /* display: none; */
 }
 
 section.hero img.desktop {
